index page set up

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,9 +88,12 @@ p {
 }
 
 #navbarbrand {
+    display: inline-block;
     font-family: 'Teko', sans-serif;
     font-size: 28pt;
     padding-top: 12px;
+    margin-right: 0;
+    padding-right: 0;
 }
 
 #dropdowndivider {
