--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,11 +147,10 @@ p {
     }
 
     #navbarbrand {
-        background-color: #5888cc;
         padding-left: 5px;
         padding-right: 5px;
         font-family: 'Teko', sans-serif;
-        font-size: smaller;
+        font-size: 16pt;
     }
 
     #navbardropdown {
@@ -159,6 +158,31 @@ p {
         border-radius: 5px;
         margin:1px;
         background-color: #5888cc;
+    }
+
+    /* Image Things */
+
+    a img {
+        margin-top: 15px;
+    }
+
+    /* Text Things */
+
+    #title-text {
+        font-size: 30pt;
+    }
+
+    .bold-text {
+        /* font-weight: bold; */
+        font-size: 15pt;
+    }
+
+    p {
+        margin: 5px;
+        padding-top: 15px;
+        font-family: 'Teko', sans-serif;
+        color: black;
+        font-size: 10pt;
     }
 
     /* Footer Things */
